Fix form alignment and body margin

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -32,3 +32,8 @@
   border-left: 0px solid black;
   transition: .3s ease border-left;
 }
+
+abbr {
+  text-decoration: none;
+  border-bottom: none !important;
+}
